--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,49 @@
 
 <h1><%= squad.name %></h1>
 
-<a href="/?squad=<%= squad.slug %>"><%= squad.name %></a>
+<a href="/?squad=squad-a-2022">Squad A</a>
+<a href="/?squad=squad-b-2022">Squad B</a>
+<a href="/?squad=squat-c-2022">Squad C</a>
+
+<sectiion>
+  <form>
+    <label>Squad:</label>
+    <input type="radio" id="squadA" name="squad" value="squad-a-2022">
+    <label for="squadA"> Squad A</label>
+    <input type="radio" id="squadB" name="squad" value="squad-b-2022">
+    <label for="squadB"> Squad B</label>
+    <input type="radio" id="squadC" name="squad" value="squat-c-2022">
+    <label for="squadC"> Squad C</label>
+    <input type="radio" id="founders" name="squad" value="founders-2021">
+    <label for="founders"> Founders </label>
+    <input type="radio" id="minorweb" name="squad" value="minor-web-2023">
+    <label for="minorweb"> Minor Web </label>
+
+    <label>Role:</label>
+    <input type="radio" id="student" name="role" value="student">
+    <label for="student"> Student</label>
+    <input type="radio" id="lecturer" name="role" value="lecturer">
+    <label for="lecturer"> Lecturer</label>
+    <input type="radio" id="co-teacher" name="role" value="co-teacher">
+    <label for="co-teacher"> Co-teacher</label>
+
+    <label for="sort-select">Sort by:</label>
+
+    <select name="orderBy" id="sort-select">
+      <option value="name-AZ">Name A-Z</option>
+      <option value="name-ZA">Name Z-A</option>
+      <option value="surname-AZ">Surname A-Z</option>
+      <option value="surname-ZA">Surname Z-A</option>
+      <option value="nickname-AZ">Nickname A-Z</option>
+      <option value="nickname-ZA">Nickname Z-A</option>
+
+
+    </select>
+
+    <input type="submit" value="submit">
+  </form>
+</sectiion>
+
 <section>
   <!-- Hier komen de members -->
   <% squad.members.forEach(member => { %>
@@ -10,15 +52,23 @@
     <% if (member.avatar) { %>
     <img src="<%= member.avatar %>" alt="De avatar van <%= member.name %>" />
     <% }else{ %>
-    <img src="/placeholder.jpg" alt="Placeholder avatar" />
+    <img src="https://via.placeholder.com/300" alt="Placeholder avatar" />
     <% } %>
     <h2><%= member.name %> <%= member.prefix %> <%= member.surname %></h2>
+    <p> <%= member.role[0] %> </p>
+    <p> <%= member.nickname %> </p>  
+
+    <% for (const [key, value] of Object.entries(member.bio || {})) {   %>
+    <p> <%- value %> </p>
+      <% } %>
+      
+    <a href="<%= member.website %>">Website</a>
   </article>
   <% }) %>
 </section>
 
+
 <button class="sortTest">Sort</button>
 
-<%- console.log(squad.members.length) %>
 <%- include('./partials/foot') %>
 
